<resources>
    <string name="stay_updated_on_your_tasks_and_events">Stay Updated on Your Tasks and Events</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_discord">Sign in with Discord</string>
    <string name="new_to_holotask_join_now">New to Holotask? Join now</string>
    <string name="register">Register</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_discord">Continue with Discord</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_to_login">Click to Login</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login_now">Already have an account? Login Now</string>
    <string name="default_web_client_id">963735918329-aj2ijnmq0tsfdlco8q8015om8uql5528.apps.googleusercontent.com</string>
    <string name="accountDetailsusername">Username:</string>
    <string name="enter_username">Enter username</string>
    <string name="user_discord">User Discord:</string>
    <string name="enter_user_discord_id">Enter user Discord ID</string>
    <string name="new_password">New Password:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="task_name">Task Name</string>
    <string name="due_date">Due Date</string>
    <string name="description">Description</string>
    <string name="add_to_google_calendar">Add to Google Calendar</string>
    <string name="category_of_tasks">Your Tasks</string>
    <string name="filter">Filter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_user">Hello, User!</string>
    <string name="back">BACK</string>
    <string name="create_task">CREATE TASK</string>
    <string name="task_name_activity_task">Task Name</string>
    <string name="due_by">Due By</string>
    <string name="date">Date</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="time_remaining_task">Time Remaining</string>
    <string name="description_task">Description</string>
    <string name="description_task2">Description</string>
    <string name="complete">COMPLETE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="back_tasks">BACK</string>
    <string name="due_date_tap_to_select">Due Date (tap to select)</string>
    <string name="task_name_edit">Task Name</string>
    <string name="description_edit">Description</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="default_notification_channel_name">HoloTask Notifications</string>
    <string name="default_notification_channel_description">Notifications for HoloTask app</string>
    <string name="new_task_created">New Task Created!</string>
    <string name="log_out">Log Out</string>
    <string name="friends">Friends</string>
    <string name="account_details">Account Details</string>
    <string name="app_settings">App Settings</string>
    <string name="home">Home</string>
    <string name="theme_modes">Theme Modes</string>
    <string name="light_mode">LIGHT MODE</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="notifications">Notifications</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back2">Back</string>
    <string name="work_in_progress">Work in Progress</string>
    <string name="back3">BACK</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="status">Status</string>
    <string-array name="status_array">
        <item>Overdue</item>
        <item>Ongoing</item>
        <item>Completed</item>
    </string-array>
</resources>