<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountDetails"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountDetailsusername"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUsername"
        android:inputType="text"
        android:hint="@string/enter_username"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewUserDiscord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_discord"
        android:textSize="16sp"
        android:layout_below="@id/editTextUsername"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextUserDiscord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUserDiscord"
        android:inputType="text"
        android:hint="@string/enter_user_discord_id"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="16sp"
        android:layout_below="@id/editTextUserDiscord"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewNewPassword"
        android:inputType="textPassword"
        android:hint="@string/enter_new_password"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_below="@id/editTextNewPassword"
        android:layout_marginTop="24dp"/>

</RelativeLayout>