<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/taskNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/deadlineInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/due_date"
        android:inputType="none"
        android:focusable="false" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <CheckBox
        android:id="@+id/addToCalendarCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_google_calendar" />

</LinearLayout>