<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="349dp"
        android:layout_height="780dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/textview_border" />

    <TextView
        android:id="@+id/TaskName"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:text="@string/task_name_activity_task"
        android:textSize="30sp" />

    <View
        android:layout_width="349dp"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/dueBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginStart="160dp"
        android:textSize="30sp"
        android:text="@string/due_by" />

    <TextView
        android:id="@+id/textViewDueBy"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="31.5dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/textview_border" />

    <TextView
        android:id="@+id/dueByDate"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/date" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/time_remaining" />

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="31.5dp"
        android:layout_marginTop="285dp"
        android:background="@drawable/textview_border" />

    <TextView
        android:id="@+id/timeRemain"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/time_remaining_task" />

    <TextView
        android:id="@+id/descTaskBorder"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/description_task" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="346dp"
        android:layout_height="150dp"
        android:layout_marginStart="31.5dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/textview_border" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="410dp"
        android:layout_marginStart="50dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:id="@+id/descTask"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/description_task2" />

    </ScrollView>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="560dp"
        android:layout_marginStart="80dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/completeTaskButton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="650dp"
        android:layout_marginStart="155dp"
        android:text="@string/complete" />

    <Button
        android:id="@+id/editTaskButton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="650dp"
        android:layout_marginStart="50dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/deleteTaskButton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="650dp"
        android:layout_marginStart="260dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="730dp"
        android:layout_marginStart="155dp"
        android:text="@string/back_tasks" />



</RelativeLayout>