<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".login">

    <ImageView
        android:id="@+id/holoTaskLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/holotask" />

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/holoTaskLogo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/containerborder">

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_updated_on_your_tasks_and_events"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:paddingStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:background="@drawable/inputcontainerborder" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:paddingStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:background="@drawable/inputcontainerborder" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/forgot_password"
            android:textColor="#007BFF"
            android:clickable="true"
            android:layout_marginTop="5dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/SignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/lineImageView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />


            <Button
                android:id="@+id/btnSignInWithGoogle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in_with_google" />

            <Button
                android:id="@+id/btnSignInWithDiscord"
                android:layout_below="@+id/btnSignInWithGoogle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in_with_discord" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/newToHoloTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/container"
        android:text="@string/new_to_holotask_join_now"
        android:textColorLink="?attr/colorAccent"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />


</RelativeLayout>