<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".register">

    <ImageView
        android:id="@+id/holoTaskLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/holotask" />

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/holoTaskLogo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/containerborder">

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_updated_on_your_tasks_and_events"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/email"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:paddingLeft="5dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:background="@drawable/inputcontainerborder" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:paddingLeft="5dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:background="@drawable/inputcontainerborder" />

        <EditText
            android:id="@+id/confirmpassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/confirm_password"
            android:paddingLeft="5dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:background="@drawable/inputcontainerborder" />


        <Button
            android:id="@+id/registerbutton"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/register"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/signupbutton"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/lineImageView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />


            <Button
                android:id="@+id/btnSignInWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="signInWithGoogle"
                android:text="@string/continue_with_google" />

            <Button
                android:id="@+id/btnSignInWithDiscord"
                android:layout_below="@+id/btnSignInWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/continue_with_discord"
                android:onClick="signInWithDiscord"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/loginToHoloTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/container"
        android:text="@string/already_have_an_account_login_now"
        android:textColorLink="?attr/colorAccent"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>